--- a/README
+++ b/README
@@ -1,1 +1,19 @@
-test
+# ILIAS RoomSharing Plugin 
+##Installation
+
+Start at your ILIAS root directory
+```bash
+mkdir -p Customizing/global/plugins/Services/Repository/RepositoryObject/
+cd Customizing/global/plugins/Services/Repository/RepositoryObject/
+git clone https://github.com/studer-raimann/RoomSharing.git
+```
+As ILIAS administrator go to "Administration->Plugins" and install/activate the plugin.
+
+###Contact
+studer + raimann ag  
+Waldeggstrasse 72  
+3097 Liebefeld  
+Switzerland 
+
+info@studer-raimann.ch  
+www.studer-raimann.ch  
